--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: ERTL # site title
+title: CS639 Vision Project # site title
 description: >- # site description
   Hi I'm Eric! I am currently attending University of Wisconsin-Madison for Computer Science. <a href="https://github.com/eertl2" target="_blank" rel="noopener">@github</a>.
 lang: en-US # default lang
 timezone: America/Chicago # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
-repo: https://github.com/eertl2/eertl2.github.io # site repo [optional]
+repo: # site repo [optional]
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
