--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author:
   twitter: twitter_username # twitter username
   facebook: facebook_username # facebook username
   email: ertleri19@gmail.com # email adress
-  avatar: /assets/img/avatar.png # avatar
+  avatar: /assets/img/pothole.png # avatar
 
 # URL settings
 url: "https://ericertl.dev" #
